tests/cases/fail/operator_type_mismatch.u
import sti.

-> main() {
  boolean b = true.
  uint32 x = 1u + b.
  sti<->print(x).
}
